Fix input text alignment

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -93,6 +93,7 @@ $input-transition-speed: 100ms !default;
   height: $input-height--small;
 
   .s-input__control {
+    height: $input-height--small - 2px;
     line-height: $input-height--small - 2px; // top + bottom border
   }
 }
@@ -104,6 +105,7 @@ $input-transition-speed: 100ms !default;
   padding: 0 $input-padding-x--medium;
 
   .s-input__control {
+    height: $input-height--small - 2px;
     line-height: $input-height--medium - 2px; // top + bottom border
   }
 }
@@ -115,6 +117,7 @@ $input-transition-speed: 100ms !default;
   padding: 0 $input-padding-x--large;
 
   .s-input__control {
+    height: $input-height--small - 2px;
     line-height: $input-height--large - 2px; // top + bottom border
   }
 }
